chore(ci): use podspecs file instead of keeping configuration in job config
- replace parameter '${BRANCH}' in initial git clone configuration with
  'master'. There exists a bug in Jenkins
  (https://issues.jenkins-ci.org/browse/JENKINS-49758) which prevents
  the variable expansion leading to a git clone error.
- remove NodeJS container usage where possible

related to #SRE-195